[package]
name = "lor_mod_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
vdf-serde = "0.3.0"

[[bin]]
path = "src/main.rs"
name = "loruploader"
